--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,10 @@
 {
     "recommendations": [
-        "ms-azuretools.vscode-azurestaticwebapps"
+        "johnpapa.angular-essentials",
+    	"ms-vscode.azure-account",
+		"ms-azuretools.vscode-azurestaticwebapps",
+		"ms-dotnettools.vscode-dotnet-runtime",
+		"github.vscode-pull-request-github",
+		"cschleiden.vscode-github-actions"
     ]
 }
