--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    // TODO: Disable when Kendo stuff is moved out again.
+    "strictTemplates": false
   }
 }
