--- a/package.json
+++ b/package.json
@@ -19,26 +19,27 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@progress/kendo-angular-buttons": "^7.0.0",
     "@progress/kendo-angular-common": "^2.0.0",
+    "@progress/kendo-angular-dateinputs": "^6.0.0",
     "@progress/kendo-angular-dropdowns": "^6.0.0",
+    "@progress/kendo-angular-excel-export": "^4.0.0",
     "@progress/kendo-angular-grid": "^6.0.1",
     "@progress/kendo-angular-inputs": "^8.0.0",
     "@progress/kendo-angular-intl": "^3.0.0",
     "@progress/kendo-angular-l10n": "^3.0.0",
+    "@progress/kendo-angular-label": "^3.0.0",
+    "@progress/kendo-angular-pdf-export": "^3.0.0",
     "@progress/kendo-angular-popup": "^4.0.3",
     "@progress/kendo-angular-treeview": "^6.0.0",
+    "@progress/kendo-data-query": "^1.0.0",
     "@progress/kendo-drawing": "^1.0.0",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "^5.0.0",
+    "prettier": "^2.5.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "@progress/kendo-angular-buttons": "^7.0.0",
-    "@progress/kendo-angular-dateinputs": "^6.0.0",
-    "@progress/kendo-angular-excel-export": "^4.0.0",
-    "@progress/kendo-angular-label": "^3.0.0",
-    "@progress/kendo-angular-pdf-export": "^3.0.0",
-    "@progress/kendo-data-query": "^1.0.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.4",
