--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "staticWebApps.outputSubpath": "dist/angular-basic"
+    "staticWebApps.outputSubpath": "dist/angular-basic",
+    "editor.formatOnSave": true
 }
